--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 			<main>
 				<div id="form-wrapper">
-					<button id="toggleForm" style="margin: 0 auto; display: block">New Book</button>
+					<button id="toggleForm" style="margin: 0 auto; display: block">Close New Book Form</button>
 					<form id="book-form" class="">
 						<!-- <label for="title">Title:</label> -->
 						<input
